# ifa_lang

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  DOCS.md  IFA_LANG_POSITIONING.md  IFA_LANG_RUNTIME_SPEC.md  MISSION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  ROADMAP.md  Review _2026-04-04.md  SECURITY.md  TUTORIAL.md  bad.ifa  bugs.md  build_release.bat  data.db  demo_ese.ifa  dist.toml  esu_path.ifa  ifa.toml  install.bat  install.ps1  install.sh  installer.iss  patch.md  requirements.txt  sandbox_test.ifa  test.ifa  test_babalawo.ifa  test_print.ifa  uninstall.bat  verify_ergonomics.ifa  verify_patch.ifa
.cargo/: audit.toml  config.toml
benchmarks/: benchmark.py  results.json
crates/: README.md
crates/ifa-babalawo/: Cargo.toml  README.md
crates/ifa-babalawo/src/: checks.rs  diagnose.rs  history.rs  infer.rs  iwa.rs  lib.rs  taboo.rs  wisdom.rs
crates/ifa-babalawo/tests/: type_tests.rs  wisdom_tests.rs
crates/ifa-bytecode/: Cargo.toml  README.md
crates/ifa-bytecode/src/: error.rs  format.rs  lib.rs
crates/ifa-bytecode/tests/: stack_effects.rs
crates/ifa-cli/: Cargo.toml  README.md
crates/ifa-cli/src/: debug_adapter.rs  deploy.rs  docgen.rs  lsp.rs  main.rs  oja.rs  sandbox.rs
crates/ifa-cli/tests/: cli_tests.rs  conformance_tier1.rs
crates/ifa-core/: Cargo.toml
crates/ifa-core/benches/: opcode_dispatch.rs  performance_benchmarks.rs
crates/ifa-core/src/: ajose.rs  ast.rs  bytecode.rs  compiler.rs  ebo.rs  error.rs  grammar.pest  interpreter.rs  iwa_pele.rs  lexer.rs  lib.rs  module_resolver.rs  native.rs  opon.rs  oracle.rs  parser.rs  parser_utils.rs  project_generator.rs  transpiler.rs  value.rs  vm.rs  vm.rs.tmp  vm_ikin.rs  vm_iroke.rs
crates/ifa-core/src/interpreter/: canvas.rs  core.rs  environment.rs  mod.rs
crates/ifa-core/src/interpreter/handlers/: fidio.rs  ika.rs  irete.rs  irosu.rs  iwori.rs  mod.rs  obara.rs  odi.rs  ofun.rs  ogbe.rs  ogunda.rs  ohun.rs  okanran.rs  osa.rs  ose.rs  otura.rs  oturupon.rs  owonrin.rs  oyeku.rs
crates/ifa-core/src/transpiler/: constants.rs  core.rs  domains.rs  expressions.rs  mod.rs  statements.rs
crates/ifa-core/tests/: async_not_available_tests.rs  compiler_ptr_tests.rs  compiler_tests.rs  conformance_ast_tests.rs  conformance_suite.rs  conformance_vm_tests.rs  full_integration_tests.rs  handler_tests.rs  integration_tests.rs  lexer_tests.rs  low_level_tests.rs  okanran_compiler_test.rs  okanran_recovery_test.rs  parser_tests.rs  proptest_tests.rs  safety_check.rs  semantic_behavior_tests.rs  semantic_equivalence.rs  semantic_std_tests.rs  tailcall_tests.rs  value_tests.rs  vm_closure_opcode_tests.rs  vm_tests.rs
crates/ifa-core/tests/common/: fixtures.rs  helpers.rs  mod.rs  proptest_strategies.rs
crates/ifa-embedded/: Cargo.toml  crates - Shortcut.lnk
crates/ifa-embedded/src/: embedded_ikin.rs  embedded_iroke.rs  embedded_manual.md.resolved  iot.rs  lib.rs  storage.rs
crates/ifa-embedded/tests/: cross_runtime.rs  embedded_ptr_tests.rs  mmio_tests.rs  yield_tests.rs
crates/ifa-installer-core/: Cargo.toml
crates/ifa-installer-core/src/: args.rs  check.rs  config.rs  extraction.rs  install.rs  lib.rs  net.rs  profiles.rs  uninstall.rs  unix.rs  windows.rs
crates/ifa-installer-core/src/platform/: windows.rs
crates/ifa-installer-gui/: Cargo.toml
crates/ifa-installer-gui/scripts/: install.bat  install.ps1  install.sh  uninstall.bat
crates/ifa-installer-gui/src/: main.rs
crates/ifa-macros/: Cargo.toml
crates/ifa-macros/src/: lib.rs
crates/ifa-sandbox/: Cargo.toml
crates/ifa-sandbox/src/: capability.rs  config.rs  lib.rs  monitor.rs  omnibox.rs  runtime.rs  sandbox.rs
crates/ifa-sandbox/tests/: capability_tests.rs  security_tests.rs
crates/ifa-std/: Cargo.toml
crates/ifa-std/examples/: gpu_bench.rs  gpu_matmul.rs  hpc_bench.rs
crates/ifa-std/src/: ffi.rs  ika.rs  irete.rs  irosu.rs  iwori.rs  lib.rs  obara.rs  odi.rs  ofun.rs  ogbe.rs  ogunda.rs  okanran.rs  opele.rs  osa.rs  ose.rs  otura.rs  oturupon.rs  owonrin.rs  oyeku.rs  sandbox_shim.rs  traits.rs  vm_registry.rs
crates/ifa-std/src/handlers/: mod.rs  registry.rs  sys.rs
crates/ifa-std/src/infra/: cpu.rs  gpu.rs  kernel.rs  mod.rs  runtime.rs  shaders.rs  storage.rs
crates/ifa-std/src/stacks/: backend.rs  crypto.rs  frontend.rs  fusion.rs  gamedev.rs  iot.rs  ml.rs  mod.rs
crates/ifa-std/tests/: crypto_tests.rs  domain_tests.rs  integration_tests.rs
crates/ifa-types/: Cargo.toml
crates/ifa-types/src/: ast.rs  bytecode.rs  domain.rs  error.rs  lib.rs  shared.rs  token.rs  traits.rs  value.rs  value_union.rs
crates/ifa-wasm/: Cargo.toml
crates/ifa-wasm/src/: lib.rs
docs/: 404.html  WORK_LOG_2026-03-20.md  WORK_LOG_2026-03-21.md  advanced.html  ajose.html  api.html  changelog.html  create-use-cases.ps1  ebo.html  ewo.html  faq.html  fix-game.ps1  ika.html  index.html  install.sh  irete.html  irosu.html  iwori.html  obara.html  odi.html  odu_lattice_implementation.md  ofun.html  ogbe.html  ogunda.html  oja.html  okanran.html  opele.html  osa.html  ose.html  otura.html  oturupon.html  owonrin.html  oyeku.html  playground.html  sandbox.html  spec_testing_policy.md  spec_vs_crates_audit.md  stacks.html
examples/: README.md  charonboat_ose.ifa  hello.ifa  import_demo.ifa  kiri.ifa  math.ifa  ose_test.ifa  spec_check.ifa  test_const.ifa  vm_smoke.ifa
homebrew/: README.md
legacy/: README.md
lib/: core.rs
search.index/: 011a69974770.js  020dee973867.js  0266a0698ea0.js  0302e2e0c275.js  04171b7589d9.js  05f8f084785d.js  0658bb6b916f.js  09a0270ab623.js  0afcdd1d76a3.js  0cbd2d8717f7.js  0d23b4f89967.js  0e6e99220b07.js  10e6cb94c6b7.js  11d1c7ed664a.js  124c5997ebb1.js  129877983420.js  147f0cdecf57.js  155cabaa02f0.js  15ea56968db0.js  165502dd6b75.js  18a5d4b0b731.js  1999c9a2773d.js  1bd3bebcec94.js  1c9d4748f4c9.js  1caa16413302.js  1cc50edc9ecf.js  1e49ec272b73.js  1e6e2604a2d5.js  1eeb17bfd262.js  1f25c1e8b318.js  201db3f14c23.js  2220674a5272.js  245baf653615.js  2582f91a10d5.js  270b07c0b554.js  27ee8af04f09.js  29399dbb0b17.js  297ce32ffd2b.js  (+86 more)
(+405 files in other folders)
