[workspace]
resolver = "2"
members = [
    "crates/ifa-types",
    "crates/ifa-core",
    "crates/ifa-std", 
    "crates/ifa-cli",
    "crates/ifa-embedded",
    "crates/ifa-macros",
    "crates/ifa-wasm",
    "crates/ifa-babalawo", "crates/ifa-sandbox", "crates/ifa-installer-core", "crates/ifa-installer-gui",
]

[workspace.package]
version = "1.2.2"
edition = "2024"
authors = ["Ifá-Lang Contributors"]
license = "MIT"
repository = "https://github.com/AAEO04/ifa-lang"
description = "Ifá-Lang - The Yoruba Programming Language"

[workspace.dependencies]
# ═══════════════════════════════════════════════════════════════════════════════
#                        CROSS-PLATFORM DEPENDENCIES
# ═══════════════════════════════════════════════════════════════════════════════

# Console I/O (Ìrosù - The Voice)
crossterm = "0.27"

# Error Handling (Ọ̀kànràn - The Asserter)
thiserror = "1.0"
eyre = "0.6"
color-eyre = "0.6"

# Date/Time (Ìwòrì - The Viewer)
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Serialization (Ìká - The Controller)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Strings (Ìká - The Controller)
ropey = "1.6"
regex = "1.10"

# Random (Ọ̀wọ́nrín - The Shuffler)
rand = "0.8"
rand_chacha = "0.3"

# Crypto/Compression (Ìrẹtẹ̀ - The Presser)
ring = "0.17"
argon2 = "0.5"  # Password hashing
zstd = "0.13"
base64 = "0.22"

# Database (Òdí - The Seal)
rusqlite = { version = "0.31", features = ["bundled"] }

# Async Runtime (Ọ̀sá - The Runner)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "net", "sync", "io-util"] }

# Networking (Òtúrá - The Messenger)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-rustls = "0.25"
rustls = "0.22"

# Terminal UI (Ọ̀ṣẹ́ - The Painter)
ratatui = "0.26"

# CLI (Ọ̀gbè - The Initiator)
clap = { version = "4.5", features = ["derive"] }

# Note: Phase 4 stack dependencies (axum, sea-orm, ndarray, embassy) 
# will be added to individual crates when those features are implemented.

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size (important for embedded)
strip = true
