[package]
name = "ifa-babalawo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Babalawo - Compile-time error checker for Ifá-Lang with proverb-based messages"

[dependencies]
ifa-core = { path = "../ifa-core" }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[dev-dependencies]
