[package]
name = "ifa-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Ifá-Lang - The Yoruba Programming Language"

[[bin]]
name = "ifa"
path = "src/main.rs"

[dependencies]
ifa-core = { path = "../ifa-core" }
ifa-std = { path = "../ifa-std" }
ifa-babalawo = { path = "../ifa-babalawo" }
ifa-sandbox = { path = "../ifa-sandbox" }

# CLI
clap.workspace = true

# Error handling
eyre.workspace = true
color-eyre.workspace = true

# Serialization (for ifa.toml)
serde.workspace = true
toml = "0.8"

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Datetime
chrono = "0.4"

# Self Update
self_update = "0.39"
