[package]
name = "ifa-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Ifá-Lang - The Yoruba Programming Language"

[[bin]]
name = "ifa"
path = "src/main.rs"

[dependencies]
ifa-core = { path = "../ifa-core" }
ifa-std = { path = "../ifa-std", features = ["iot"] }
ifa-babalawo = { path = "../ifa-babalawo" }
ifa-sandbox = { path = "../ifa-sandbox" }

# CLI
clap.workspace = true

# Error handling
eyre.workspace = true
color-eyre.workspace = true

# Serialization (for ifa.toml)
serde.workspace = true
serde_json.workspace = true
lsp-server = "0.7"
lsp-types = "0.94"
toml = "0.8"

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Datetime
chrono.workspace = true

# Self Update
self_update = "0.39"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
ring.workspace = true

# System info for memory tracking
sysinfo = "0.30"


