[package]
name = "ifa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core VM and runtime for Ifá-Lang"

[lib]
name = "ifa_core"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["ifa-sandbox"]

[dependencies]
# Sandbox is only for native builds (not WASM)
ifa-sandbox = { path = "../ifa-sandbox", optional = true }

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Serialization (for bytecode)
serde.workspace = true
bincode.workspace = true

# Data structures
indexmap = "2.2"

# Lexer (logos for fast tokenization)
logos = "0.14"

# Parser (pest for PEG parsing)
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
proptest = "1.4"

