[package]
name = "ifa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core VM and runtime for Ifá-Lang"

[lib]
name = "ifa_core"
path = "src/lib.rs"

[features]
default = ["native", "parallel", "sysinfo"]
native = ["ifa-sandbox"]
std = []
network = ["ureq"]
audio = ["rodio"]
parallel = ["rayon"]
sysinfo = ["dep:sysinfo"]
gpu = ["dep:wgpu"]
persistence = []

[dependencies]

# Shared types (IfaValue, IfaError, OduDomain)
ifa-types = { path = "../ifa-types", features = ["vm"] }

# For CPU thread count (lightweight, no cycle)
num_cpus = "1.16"

# Sandbox is only for native builds (not WASM)
ifa-sandbox = { path = "../ifa-sandbox", optional = true }

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Serialization (for bytecode)
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true

# Data structures
indexmap = "2.2"
serde_json = "1.0"

# Lexer (logos for fast tokenization)
logos = "0.14"

# Parser (pest for PEG parsing)
pest = "2.7"
pest_derive = "2.7"

# Crypto for handlers (lightweight)
sha2 = "0.10"
getrandom = { version = "0.2", features = ["std", "js"] }
base64 = "0.22"
uuid = { version = "1.8", features = ["v4", "js"] }

# Network for handlers (optional, blocking)
ureq = { version = "3", optional = true }

# Parallel operations (used internally on primitives)
rayon = { version = "1.10", optional = true }

# Audio for ohun handler (optional)
rodio = { version = "0.17", optional = true }

# System info
sysinfo = { version = "0.30", optional = true }

# GPU (optional, for GpuHandler data types)
wgpu = { version = "0.19", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "opcode_dispatch"
harness = false
