[package]
name = "ifa-installer-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
# System Info
sysinfo = "0.30"
dirs = "5.0"
winreg = { version = "0.52", optional = true }

# Networking
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
hex = "0.4"
thiserror.workspace = true

# CLI
clap.workspace = true

# Extraction
zip = "0.6"
tar = "0.4"
flate2 = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.10"

