[package]
name = "ifa-installer-gui"
version = "0.1.0"
edition.workspace = true

[dependencies]
ifa-installer-core = { path = "../ifa-installer-core" }
eframe = "0.27"
tokio = { version = "1.0", features = ["full"] }
headers = "0.3"
rfd = "0.14"
# Added missing deps used in main.rs
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
