[package]
name = "ifa-sandbox"
version = "1.2.0"
edition = "2024"

[dependencies]
# Core sandbox dependencies - updated to latest
wasmtime = "40.0"
wasmtime-wasi = "40.0"

# Error handling
eyre = "0.6"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# Enable network capabilities (requires wasmtime with network support)
network = []
