[package]
name = "ifa-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
# Core sandbox dependencies - updated to latest
wasmtime = "40.0"
wasmtime-wasi = "40.0"
wat = "1.0"

# Error handling
eyre.workspace = true
thiserror.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# Enable network capabilities (requires wasmtime with network support)
network = []
