[package]
name = "ifa-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standard library for Ifá-Lang - The 16 Odù Domains"

[lib]
name = "ifa_std"
path = "src/lib.rs"

[dependencies]
# Shared types (IfaValue, IfaError, OduDomain)
ifa-types = { path = "../ifa-types" }

ifa-sandbox = { path = "../ifa-sandbox" }
ifa-core = { path = "../ifa-core" }

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Console I/O (Ìrosù)
crossterm.workspace = true

# Date/Time (Ìwòrì)
chrono.workspace = true

# Strings (Ìká)
ropey.workspace = true
regex.workspace = true


# serialization
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
urlencoding = "2.1"

# Random (Ọ̀wọ́nrín)
rand.workspace = true
rand_chacha.workspace = true

# Crypto (Ìrẹtẹ̀)
ring.workspace = true
argon2.workspace = true  # Password hashing
zstd.workspace = true
base64.workspace = true

# Math/ML (Ògúndá)
ndarray = "0.15"

# Database (Òdí)
rusqlite = { workspace = true, optional = true }

# Async (Ọ̀sá)
tokio = { workspace = true, optional = true }

# Networking (Òtúrá)
reqwest = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

# Terminal UI (Ọ̀ṣẹ́)
ratatui = { workspace = true, optional = true }

# Polyglot FFI (Ìrẹtẹ̀/Òfún)
libloading = "0.8"
libffi = { version = "3.2", optional = true }  # Native dynamic calls
boa_engine = { version = "0.17", optional = true }
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }

# Kernel / System info
sysinfo = { version = "0.30", optional = true }

# Audio (Ìrosù)
rodio = { version = "0.17", optional = true }


[dev-dependencies]
tempfile = "3.10"

[dependencies.heapless]
version = "0.8"
optional = true

[dependencies.rayon]
version = "1.8"
optional = true

[dependencies.wgpu]
version = "0.19"
optional = true

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]
optional = true

[dependencies.pollster]
version = "0.3"
optional = true

[dependencies.bincode]
version = "1.3"
optional = true

[features]
default = ["backend", "parallel"]

# Language Features
js = ["boa_engine"]
python = ["pyo3"]
native_ffi = ["libffi"]  # Dynamic C calls via libffi (not WASM-compatible)

# Domain Features
backend = ["tokio", "reqwest", "tokio-rustls", "rusqlite"]
frontend = [] # Placeholder for web-sys
game = ["ratatui", "gpu"] 
iot = ["heapless"] # Bounded buffers for embedded
crypto = ["ring/std", "argon2/std"]
ml = ["parallel"] # ML needs rayon
fusion = ["backend", "frontend"] # Hybrid Runtime
fullstack = ["fusion"] # Alias


# Infrastructure Features
parallel = ["rayon"]
gpu = ["wgpu", "pollster", "tokio", "bytemuck"]
persistence = ["bincode", "tokio/fs", "tokio/io-util"]
profiling = []
kernel = ["sysinfo"]
audio = ["rodio"]

# Legacy Alias
full = ["backend", "game", "crypto", "ml", "parallel", "gpu", "persistence"]
minimal = ["iot"]
