[package]
name = "ifa-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standard library for Ifá-Lang - The 16 Odù Domains"

[lib]
name = "ifa_std"
path = "src/lib.rs"

[dependencies]
# Shared types (IfaValue, IfaError, OduDomain)
ifa-types = { path = "../ifa-types", features = ["dashmap"] }

ifa-sandbox = { path = "../ifa-sandbox", optional = true }
ifa-core = { path = "../ifa-core", default-features = false }

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Concurrent HashMap (DashMap for performance)
dashmap = { version = "6.1", optional = true }
once_cell = "1.19"

# Console I/O (Ìrosù)
crossterm = { workspace = true, optional = true }

# Date/Time (Ìwòrì)
chrono.workspace = true

# Strings (Ìká)
ropey.workspace = true
regex.workspace = true


# serialization
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
urlencoding = "2.1"

# Random (Ọ̀wọ́nrín)
rand = { workspace = true, optional = true }
rand_chacha.workspace = true

# Crypto (Ìrẹtẹ̀)
ring = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }  # Password hashing
zstd = { workspace = true, optional = true }
base64.workspace = true

# Math/ML (Ògúndá)
ndarray = { version = "0.15", optional = true }

# Database (Òdí)
rusqlite = { workspace = true, optional = true }

# Async (Ọ̀sá)
tokio = { workspace = true, optional = true }

# Networking (Òtúrá)
reqwest = { workspace = true, optional = true }

tokio-rustls = { workspace = true, optional = true }
tl = { version = "0.7.7", optional = true } # HTML Parser (Ìkọ́)

# Terminal UI (Ọ̀ṣẹ́)
ratatui = { workspace = true, optional = true }

# Polyglot FFI (Ìrẹtẹ̀/Òfún)
libloading = { version = "0.8", optional = true }
libffi = { version = "3.2", optional = true }  # Native dynamic calls
boa_engine = { version = "0.19", optional = true }
pyo3 = { version = "0.27", features = ["auto-initialize"], optional = true }

# Kernel / System info
sysinfo = { version = "0.30", optional = true }

# Audio (Ìrosù)
rodio = { version = "0.17", optional = true }


[dev-dependencies]
tempfile = "3.10"

[dependencies.heapless]
version = "0.8"
optional = true

[dependencies.rayon]
version = "1.8"
optional = true

[dependencies.wgpu]
version = "0.19"
optional = true

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]
optional = true

[dependencies.pollster]
version = "0.3"
optional = true

[dependencies.bincode]
version = "1.3"
optional = true

[features]
default = ["backend", "parallel", "dashmap"]

# Language Features
js = ["boa_engine"]
python = ["pyo3"]
native_ffi = ["libffi", "libloading"]  # Dynamic C calls via libffi (not WASM-compatible)

# Performance Features
dashmap = ["ifa-types/dashmap", "dep:dashmap"]

# Domain Features
backend = ["tokio", "reqwest", "tokio-rustls", "rusqlite", "rsa_math", "ifa-sandbox", "crossterm"]
frontend = [] # Placeholder for web-sys
game = ["ratatui", "gpu"] 
iot = ["heapless"] # Bounded buffers for embedded
crypto = ["ring", "argon2"]
ml = ["parallel"] # ML needs rayon
fusion = ["backend", "frontend"] # Hybrid Runtime
fullstack = ["fusion"] # Alias


# Infrastructure Features
parallel = ["rayon", "ifa-core/parallel"]
gpu = ["wgpu", "bytemuck"]
gpu_native = ["gpu", "tokio", "pollster"]
persistence = ["bincode", "tokio/fs", "tokio/io-util"]
profiling = []
# Kernel / System info
kernel = ["dep:sysinfo"]
sysinfo = ["dep:sysinfo"]

audio = ["dep:rodio"]
html = ["dep:tl"]

# Legacy Alias
full = ["backend", "game", "crypto", "ml", "parallel", "gpu", "persistence", "html"]
minimal = ["iot"]

# WASM Feature (Optimized for Playground)
wasm = [
    # Core logic
    "rsa_math", 
    # Disable native IO/Concurrency
    # We can keep 'gpu' if we handle wgpu correctly, but 'backend' pulls tokio.
    # So we must be selective.
]

# Aliases
rsa_math = ["ndarray", "rand"]

