[package]
name = "ifa-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types for Ifá-Lang runtime - IfaValue, IfaError, OduDomain"

[lib]
name = "ifa_types"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror.workspace = true

# Serialization (for IfaValue)
serde = { workspace = true, features = ["derive"] }
