[package]
name = "ifa-types"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types for Ifá-Lang runtime - IfaValue, IfaError, OduDomain"

[lib]
name = "ifa_types"
path = "src/lib.rs"

[dependencies]
# Core definitions
ifa-bytecode = { path = "../ifa-bytecode", version = "0.1" }

# Error handling
thiserror = { workspace = true, optional = true }

# Serialization (for IfaValue)
serde = { workspace = true, features = ["derive", "rc"], optional = true }
bincode = { workspace = true, optional = true }

# Concurrent HashMap (DashMap for performance)
dashmap = { version = "6.1", optional = true }

[features]
default = ["std", "serde", "dashmap"]
std = ["dep:thiserror", "ifa-bytecode/std", "ifa-bytecode/serde", "dep:dashmap"]
serde = ["dep:serde", "dep:bincode", "ifa-bytecode/serde"]
dashmap = ["dep:dashmap"]
vm = [] # Extensions for VM usage (AstFn, BytecodeFn, Ptr, Class)
alloc = ["ifa-bytecode/alloc"] # For future no_std support with alloc
